--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
 
-body {
+html, body {
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
@@ -14,23 +14,28 @@ body {
 
 .allow-access {
     position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-    background-color: white;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
     z-index: 10;
+
+    font-size: 45pt;
+    text-align: center;
 }
 
 .hand {
     position: absolute;
     top: 50%;
     left: 50%;
-    /* transform: scaleX(-100%); */
     translate: -50% -50%;
     transition: all .1s;
-    height: 80%;
+    width: min(120vw, 80vh);
+    height: min(120vw, 80vh);
+    overflow: clip;
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 .cents {
@@ -39,7 +44,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     
-    font-size: 30pt;
+    font-size: min(10vw, 10vh);
     font-weight: 600;
 
     transition: translate .1s;
