--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,11 @@
 
 html, body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    overflow: clip;
+    overflow: hidden;
     
     font-family: "DM Sans";
     font-weight: 500;
@@ -23,12 +23,14 @@ html, body {
     position: absolute;
     top: 50%;
     left: 50%;
-    translate: -50% -50%;
+    transform: translate(-50%, -50%);
     z-index: 10;
 
     width: 80vw;
-    font-size: 80pt;
+    font-size: 2rem;
     text-align: center;
+
+    user-select: none;
 }
 
 .hand {
@@ -47,25 +49,33 @@ html, body {
 }
 
 .cents {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     
-    font-size: min(10vw, 10vh);
-    font-weight: 600;
+    font-size: min(15vw, 15vh);
+    font-weight: 500;
 
     transition: translate .1s;
 }
 
-.note {
+.footer {
     position: absolute;
-    bottom: 100px;
+    bottom: 50px;
     left: 50%;
     transform: translateX(-50%);
+
+    display: flex;
+    width: 70%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.note {
     line-height: 1em;
     display: flex;
-    gap: 30px;
+    gap: 10px;
 
     font-size: min(20vw, 20vh);
 }
