--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 /* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap'); */
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lexend:wght@100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lexend:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 /* :root {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,7 +16,7 @@ html, body {
     margin: 0;
     overflow: hidden;
     
-    font-family: "Lexend";
+    font-family: "Fredoka";
 }
 
 .allow-access {
@@ -54,7 +55,7 @@ html, body {
     transform: translate(-50%, -50%); */
     
     font-size: min(15vw, 15vh);
-    font-weight: 300;
+    font-weight: 400;
 
     transition: translate .1s;
 }
@@ -77,7 +78,7 @@ html, body {
     gap: 10px;
 
     font-size: min(20vw, 20vh);
-    font-weight: 300;
+    font-weight: 400;
 }
 
 .note-letter {
@@ -94,5 +95,5 @@ html, body {
     display: flex;
     flex-direction: column;
     
-    font-weight: 300;
+    font-weight: 400;
 }
